# w0_analysis

./: .gitignore  CMakeLists.txt  average_mul_over_fpi_df_dmuc_smallV_OS_fpi_A0P5.txt  average_mul_over_fpi_df_dmuc_smallV_tm_fpi_A0P5.txt  average_mul_over_fpi_df_dmus_smallV_OS_fpi_A0P5.txt  average_mul_over_fpi_df_dmus_smallV_tm_fpi_A0P5.txt  average_smallV_phys_point_fpi_A0P5.cpp  create_fake_jack.cpp  data_ens_B64  data_ens_C80  data_ens_D96  data_ens_E112  deriv_other_fpi.cpp  derivative_corr.cpp  fit_all_beta_rew_der.cpp  fit_all_beta_w0rew_der.cpp  fit_all_rew_der.cpp  fit_all_w0_m0.cpp  fit_cont_w0_fpi.cpp  fit_files_B64  fit_files_B64_LMA  fit_files_C80_LMA  fit_files_all  fit_files_all_w0  fit_files_small_volume_Mpi_fpi.txt  fit_files_small_volume_w0.txt  fit_files_w0_m0.txt  fit_smallV_B24_OS_fpi_A0P5.txt  fit_smallV_B24_OS_strange_fpi_A0P5.txt  fit_smallV_B24_fpi_A0P5.txt  fit_smallV_B24_strange_fpi_A0P5.txt  fit_smallV_B32_OS_fpi_A0P5.txt  fit_smallV_B32_OS_strange_fpi_A0P5.txt  fit_smallV_B32_fpi_A0P5.txt  fit_smallV_B32_strange_fpi_A0P5.txt  fit_smallV_C48_OS_fpi_A0P5.txt  fit_smallV_C48_OS_strange_fpi_A0P5.txt  fit_smallV_C48_fpi_A0P5.txt  fit_smallV_C48_strange_fpi_A0P5.txt  fit_smallV_phys_point_fpi_A0P5.cpp  (+24 more)
w0_book/: A32.qmd  B32.qmd  B64.qmd  B64_fpi.qmd  C48.qmd  _publish.yml  _quarto.yml  fit_all_deriv.qmd  fit_all_deriv_w0.qmd  fit_deriv_fpi.qmd  fit_deriv_fpi_C80.qmd  fpi_A0P5.qmd  higer_deriv.qmd  intro.qmd  note_reweighting.qmd  note_sea_corrections.qmd  params.qmd  pion_B64.qmd  pion_C80.qmd  pion_D96.qmd  publish.sh  quark_masses.qmd  references.bib  statistical_investigation_B64.qmd  system_scale_setting.qmd  test_removing_la.qmd  w0_scale_setting.qmd  w0_small_volumes.qmd
w0_book/plots/: der_fpi.R  w0_der_fit.R  w0_scale_setting.R
